# nx

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  MVP3.plan.md  PROJECT_STATUS.md  README.md  SECURITY.md  build-uconsole.sh  build.ninja  debug_buffer_test  debug_buffer_test.cpp  debug_test  debug_wrap.cpp  migrate_titles.cpp  migrate_titles.py  migrate_titles.sh  mvp2-plan.md  mvp2_improvements_req.md  mvp3-implementation-plan.md  nx-edit-helper.sh  nx-ux-plan.md  plan.md  simple_debug  simple_debug.cpp  simple_test.cpp  tech-debt.md  test_editor.sh  test_editor_selection  test_editor_selection.cpp  test_filename.cpp  (+9 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  performance.yml  release.yml  security.yml
build-ci/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-ci/tests/: integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
build-coverage/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-coverage/tests/: integration_tests[1]_include.cmake  integration_tests[1]_tests.cmake  nx_benchmark  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build-debug/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-debug/include/nx/: version.hpp
build-debug/tests/: integration_tests[1]_include.cmake  integration_tests[1]_tests.cmake  nx_benchmark  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build-release/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  RELEASE_NOTES.md  build.ninja  install.sh  nx-release-v1.0.0-darwin-arm64-final.tar.gz.sha256  nx-release-v1.0.0-darwin-arm64.tar.gz.sha256
build-release/include/nx/: version.hpp
build-release/release/: CHANGELOG.md  README.md  nx
build-release/release/completions/: install.sh  nx.bash
build-release/release/docs/: error-handling-guidelines.md  notebook-system.md  thread-safety-analysis.md  user-manual.md
build-release/tests/: integration_tests[1]_include.cmake  integration_tests[1]_tests.cmake  nx_benchmark  test_detail.xml  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build-sanitizer/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-sanitizer/tests/: integration_tests[1]_include.cmake  nx_benchmark  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
build-test/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja
build-test/tests/: integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
cmake/: GitVersion.cmake  version.hpp.in
completions/: README.md  _nx
dev/: Dockerfile.arm64
dev/plans/: PROJECT_STATUS.md
dev/plans/archive/: mvp2-implementation-plan.md  review_req.md
dev/scripts/: benchmark.sh  setup-dev-env.sh
docs/: amit-optimized-config.toml  config-git-quick-start.toml  di_refactoring_summary.md  example-config-auto-sync.toml  exception-safety-analysis.md  nx.1  nx_cpp_notes_cli_spec_with_ai.md  semantic-versioning-strategy.md  semantic-versioning.md  user-manual.md
docs/tldr/: nx-ai.md  nx-maintenance.md  nx-notebook.md  nx-sync.md  nx-tpl.md  nx.md
examples/: application_di_refactor.cpp
include/nx/: common.hpp  version.hpp
include/nx/cli/: application.hpp  application_factory.hpp  command_error_handler.hpp
include/nx/config/: config.hpp
include/nx/core/: metadata.hpp  note.hpp  note_id.hpp
include/nx/crypto/: age_crypto.hpp
include/nx/di/: service_configuration.hpp  service_container.hpp
include/nx/import_export/: exporter.hpp  import_manager.hpp
include/nx/index/: index.hpp  query_parser.hpp  ripgrep_index.hpp  sqlite_index.hpp
include/nx/store/: attachment_store.hpp  filesystem_attachment_store.hpp  filesystem_store.hpp  note_store.hpp  notebook_manager.hpp
include/nx/sync/: auto_sync_manager.hpp  git_sync.hpp
include/nx/util/: time.hpp  (+6 more)
src/: common.cpp
src/app/: main.cpp
src/cli/: application.cpp  application_factory.cpp  command_error_handler.cpp
src/config/: config.cpp
src/core/: metadata.cpp  note.cpp  note_id.cpp
src/crypto/: age_crypto.cpp
src/di/: service_configuration.cpp  service_container.cpp
src/import_export/: export_manager.cpp  import_manager.cpp  json_exporter.cpp  markdown_exporter.cpp
src/index/: index.cpp  query_parser.cpp  ripgrep_index.cpp  sqlite_index.cpp
src/store/: attachment_store.cpp  filesystem_attachment_store.cpp  filesystem_store.cpp  notebook_manager.cpp
src/sync/: auto_sync_manager.cpp  git_sync.cpp
src/template/: template_manager.cpp
src/tui/: ai_explanation.cpp  editor_autocomplete.cpp  editor_buffer.cpp  editor_commands.cpp  editor_dialogs.cpp  editor_preferences.cpp  editor_search.cpp  editor_security.cpp  enhanced_cursor.cpp  markdown_highlighter.cpp  markdown_shortcuts.cpp  tui_app.cpp  unicode_handler.cpp  viewport_manager.cpp  word_wrapper.cpp
src/util/: error_handler.cpp  error_logger.cpp  filesystem.cpp  http_client.cpp  safe_process.cpp  security.cpp  time.cpp  xdg.cpp
tests/: CMakeLists.txt  integration_tests[1]_include.cmake  unit_tests[1]_include.cmake
tests/benchmark/: core_benchmarks.cpp  corpus_generator.cpp  corpus_generator.hpp
tests/common/: temp_directory.cpp  temp_directory.hpp  test_helpers.cpp  test_helpers.hpp
tests/integration/: test_notebook_cli.cpp
tests/unit/core/: test_metadata.cpp  test_note.cpp  test_note_id.cpp
tests/unit/index/: test_query_parser.cpp  test_ripgrep_index.cpp  test_sqlite_index.cpp
tests/unit/store/: test_notebook_manager.cpp
tests/unit/tui/: ai_explanation_test.cpp  commands_test.cpp  editor_autocomplete_test.cpp  editor_buffer_test.cpp  editor_preferences_test.cpp  editor_search_test.cpp  enhanced_cursor_test.cpp  markdown_highlighter_test.cpp  markdown_shortcuts_test.cpp  security_test.cpp  unicode_test.cpp  viewport_manager_test.cpp
(+80 files in other folders)
